<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp">

    <TextView
        android:text="@string/linguagem_parte_2"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/meem_description2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/meem_ling2_comando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_checkbox1" />
    <TextView
        android:text="@string/meem_ling2_comando1"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/meem_ling2_comando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_checkbox2" />
    <TextView
        android:text="@string/meem_ling2_comando2"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/meem_ling2_comando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_checkbox3" />
    <TextView
        android:text="@string/meem_ling2_comando3"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
        android:text="@string/meem_ling2_leucomando"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_checkbox4" />
    <TextView
        android:text="@string/meem_ling2_comando_inst"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:text="@string/mostrar_comando"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_button_showcommand"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/black" />

    <CheckBox
        android:text="@string/meem_ling2_escreveufrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling2_checkbox5" />
    <TextView
        android:text="@string/meem_ling2_escrita_inst"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="15sp">
        <ImageButton android:id="@+id/btn_meem_save_phrase"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:src="@android:drawable/ic_menu_camera" />
        <TextView
            android:paddingLeft="5sp"
            android:layout_gravity="center"
            android:text="@string/arquivar_frase_paciente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="italic"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meem_add_button_ant"
            android:layout_weight="1" />

        <Button
            android:text="@string/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meem_add_button_prox"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>