<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp">

    <TextView
        android:text="@string/linguagem_parte_1"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/meem_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"/>

    <CheckBox
        android:text="@string/meem_ling1_imagem_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling1_checkbox1" />

    <TextView
        android:text="@string/meem_ling1_imagem_checkbox_inst"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/mostrar_imagem"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling1_button_showimage"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/black"
        android:layout_marginBottom="15sp"/>

    <CheckBox
        android:text="@string/meem_ling1_frase_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/meem_ling1_checkbox2" />

    <TextView
        android:text="@string/meem_ling1_frase_checkbox_inst"
        android:textStyle="bold"
        android:layout_marginLeft="35sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meem_add_button_ant"
            android:layout_weight="1" />

        <Button
            android:text="@string/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meem_add_button_prox"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>