<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_patient_persist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="br.edu.ufabc.padm.pocketmentaltest.PatientPersist">

    <EditText android:id="@+id/persist_patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"/>
    <EditText android:id="@+id/persist_patient_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/address"/>
    <EditText android:id="@+id/persist_patient_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/birthday"/>
    <EditText android:id="@+id/persist_patient_schooling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/schooling"/>
    <EditText android:id="@+id/persist_patient_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sex"/>
    <EditText android:id="@+id/persist_patient_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone"/>
    <EditText android:id="@+id/persist_patient_sus_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/sus_card"/>
    <Button android:id="@+id/persist_patient_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"/>
</LinearLayout>
