<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:hint="Titulo"
        android:padding="10sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cdr_add_title" />
    <TextView
        android:text="@string/cdr_intro_explanation"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cdr_add_explanation" />

    <Button
        android:text="@string/gravar_entrevista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableRight="@android:drawable/stat_sys_headset"
        android:drawablePadding="10sp"
        android:layout_gravity="center"
        android:id="@+id/button_record" />

    <TextView
        android:text="@string/avaliacao"
        android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cdr_add_avaliation" />



    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp">
        <RadioButton
            android:text="opcao..."
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_opt1"
            android:layout_weight="1" />
        <RadioButton
            android:text="opcao..."
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_opt2"
            android:layout_weight="1" />
        <RadioButton
            android:text="opcao..."
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_opt3"
            android:layout_weight="1" />
        <RadioButton
            android:text="opcao..."
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_opt4"
            android:layout_weight="1" />
        <RadioButton
            android:text="opcao..."
            android:padding="5sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_opt5"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:hint="@string/observacoes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_weight="0.8" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/anterior"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_button_ant"
            android:layout_weight="1"
            />

        <Button
            android:text="@string/proximo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cdr_add_button_prox"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/white"
            android:layout_weight="1" />

    </LinearLayout>


</LinearLayout>